# sec-parser-exploration

./: 00_mdna.ipynb  01_nested_tables_to_markdown.ipynb  02_other_sec_form_types.ipynb  README.md  pyproject.toml  requirements.txt
data/: tables.py
