[tool.poetry]
name = "sec-parser-exploration"
version = "0.0.0"
description = ""
authors = ["Elijas <4084885+Elijas@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
notebook = "^7.1.2"
jupyter-black = "^0.3.4"
tiktoken = "^0.5.1"
html2text = "^2024.2.26"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
litellm = "^1.34.38"
rich = "^13.7.1"
sec-downloader = "^0.11.1"
sec-parser = "^0.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
